// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should accept base error title 1`] = `
<form
  className="form-horizontal well"
  onSubmit={[Function]}
>
  <Alert
    className="base in fade"
    title="Oops"
    variant="danger"
  >
    <span>
      invalid something
    </span>
  </Alert>
  <FormActions
    disabled={false}
    onCancel={[Function]}
    submitting={false}
  />
</form>
`;

exports[`Form should dispaly form errors as warning 1`] = `
<form
  className="form-horizontal well"
  onSubmit={[Function]}
>
  <Alert
    className="base in fade"
    title="Unable to save. "
    variant="warning"
  >
    <span>
      Do not feed the trolls
    </span>
  </Alert>
  <FormActions
    disabled={false}
    onCancel={[Function]}
    submitting={false}
  />
</form>
`;

exports[`Form should display multiple base errors 1`] = `
<form
  className="form-horizontal well"
  onSubmit={[Function]}
>
  <Alert
    className="base in fade"
    title="Unable to save. "
    variant="danger"
  >
    <li
      key="0"
    >
      invalid something
    </li>
    <li
      key="1"
    >
      error too
    </li>
  </Alert>
  <FormActions
    disabled={false}
    onCancel={[Function]}
    submitting={false}
  />
</form>
`;

exports[`Form should display one base error 1`] = `
<form
  className="form-horizontal well"
  onSubmit={[Function]}
>
  <Alert
    className="base in fade"
    title="Unable to save. "
    variant="danger"
  >
    <span>
      invalid something
    </span>
  </Alert>
  <FormActions
    disabled={false}
    onCancel={[Function]}
    submitting={false}
  />
</form>
`;

exports[`Form should render a form 1`] = `
<form
  className="form-horizontal well"
  onSubmit={[Function]}
>
  <FormActions
    disabled={false}
    onCancel={[Function]}
    submitting={false}
  />
</form>
`;
